# health-data-watchdog

./: README.md  pyproject.toml
health_data_watchdog/: __init__.py  alerting.py  cli.py  config.py  datasets.py  differ.py  fetcher.py  reporter.py  store.py
tests/: __init__.py  test_alerting.py  test_config.py  test_datasets.py  test_differ.py  test_fetcher.py  test_store.py
